fix of text overflow

--- a/assets/styles/queries.css
+++ b/assets/styles/queries.css
@@ -1032,7 +1032,7 @@
     align-items: center;
     text-align: center;
     margin-bottom: 4rem;
-    min-height: 108vh;
+    min-height: 135vh;
   }
   .mission__row--video {
     display: flex;
